--- a/index.html
+++ b/index.html
@@ -2,25 +2,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Motion Ball</title>
+	<title></title>
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css" />
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="script.js"></script>
 </head>
 <body>
-	<div id="ball"></div>
-	<table>
-		<tr>
-			<th>x</th>
-			<td id="xVal"></val>
-		</tr>
-
-		<tr>
-			<th>shakepoint</th>
-			<td id="sVal"></val>
-		</tr>
-
-	</table>
+	<h1>Hello</h1>
+	
 </body>
 </html>
