--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 	<script type="text/javascript">
 		window.onload = function() {
 			var game = new Phaser.Game(800, 600, Phaser.AUTO, '', {preload: preload, create: create
-				,render: render});
+				,update: update,render: render});
 			var character;		
 			var mario;
+			var cursors;
+			
 			
 			function preload(){
 				game.load.image('mario', 'assets/mario.png');
@@ -25,7 +27,14 @@
 			function create(){
 				character = new Phaser.Rectangle(370, 270, 60, 60);
 				mrio = game.add.sprite(100, 100, 'mario');
+				
+				cursors = game.input.keyboard.createCursorKeys();
 			}
+			
+			function update(){
+				if(cursors.up.isDown === ture){
+					mario.rotation += 0.05;
+				}
 			
 			function render(){
 				game.debug.geom(character,'#ffffff');
