--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript">
 		window.onload = function() {
 			var game = new Phaser.Game(800, 600, Phaser.AUTO, '', {preload: preload, create: create
-				,update: update,render: render});
+				, update: update, render: render});
 			var character;		
 			var mario;
 			var cursors;
@@ -26,7 +26,8 @@
 			
 			function create(){
 				character = new Phaser.Rectangle(370, 270, 60, 60);
-				mrio = game.add.sprite(100, 100, 'mario');
+				mario = game.add.sprite(100, 100, 'mario');
+				mario.anchor.setTo(1,1);
 				
 				cursors = game.input.keyboard.createCursorKeys();
 			}
