--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 				if(cursors.up.isDown === ture){
 					mario.rotation += 0.05;
 				}
+				else if(cursors.down.isDown === true){
+					mario.rotation -= 0.05;				
+				}
 			}
 			
 			function render(){
