--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			}
 			
 			function update(){
-				if(cursors.up.isDown === ture){
+				if(cursors.up.isDown === true){
 					mario.rotation += 0.05;
 				}
 				else if(cursors.down.isDown === true){
