--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 				else if(cursors.down.isDown === true){
 					mario.rotation -= 0.05;				
 				}
+				else if(cursors.right.isDown === true){
+					mario.width += 0.05;				
+				}
+				else if(cursors.left.isDown === true && mario.width > 0){
+					mario.width -= 0.05;				
+				}					
 			}
 			
 			function render(){
