--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 					mario.rotation -= 0.05;				
 				}
 				else if(cursors.right.isDown === true){
-					mario.width += 1;				
+					mario.x += 1;				
 				}
-				else if(cursors.left.isDown === true && mario.width > 0){
-					mario.width -= 1;				
+				else if(cursors.left.isDown === true && mario.x > 0){
+					mario.x -= 1;				
 				}					
 			}
 			
