--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			}
 			
 			function create(){
-				//character = new Phaser.Rectangle(370, 270, 60, 60);
+				character = new Phaser.Rectangle(370, 270, 60, 60);
 				mario = game.add.sprite(100, 100, 'mario');
 				mario.anchor.setTo(350,250);
 				
