--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 			
 			function update(){
 				if(cursors.up.isDown === true){
-					mario.rotation += 0.05;
+					mario.y += 1.5;
 				}
 				else if(cursors.down.isDown === true){
-					mario.rotation -= 0.05;				
+					mario.y -= 1.5;				
 				}
 				else if(cursors.right.isDown === true){
 					mario.x += 1.5;				
@@ -70,7 +70,16 @@
 			}
 			
 			function moveUp(){
-				mario.y=10;
+				mario.y+=10;
+			}
+			function moveDown(){
+				mario.y-=10;
+			}
+			function moveLeft(){
+				mario.x-=10;
+			}
+			function moveRight(){
+				mario.x+=10;
 			}
 		};
 	</script>
