--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				else if(cursors.left.isDown === true && mario.x > 100){
 					mario.x -= 1.5;				
 				}	
-				else if(corsors.spaceKey.isDown === true){
+				else if(corsors.space.isDown === true){
 				
 				}
 			
