--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
 			function update(){
 				if(cursors.up.isDown === true){
 					mario.y -= 1.5;
+					if(cursors.right.isDown === true){
+						mario.y -= 1.5;
+						mario.x += 1.5;				
+					}
+					else if(cursors.left.isDown === true && mario.x > 100){
+						mario.y -= 1.5;
+						mario.x -= 1.5;				
+					}
 				}
 				else if(cursors.down.isDown === true){
 					mario.y += 1.5;				
@@ -64,22 +72,6 @@
 					mario.x -= 1.5;				
 				}
 				
-				else if(cursors.up.isDown === true && cursors.right.isDown === true){
-					mario.y -= 1.5;
-					mario.x += 1.5;	
-				}
-				else if(cursors.up.isDown === true && cursors.left.isDown === true){
-					mario.y -= 1.5;
-					mario.x -= 1.5;	
-				}
-				else if(cursors.Down.isDown === true && cursors.right.isDown === true){
-					mario.y += 1.5;
-					mario.x += 1.5;	
-				}
-				else if(cursors.Down.isDown === true && cursors.left.isDown === true){
-					mario.y += 1.5;
-					mario.x -= 1.5;	
-				}
 			}
 						
 			function render(){
